--- a/google.html
+++ b/google.html
@@ -37,7 +37,8 @@
 
         a {
             display: inline-block;
-            margin: 10px;
+            padding: 5px;
+            margin: 0 5px;
             text-decoration: none;
             color: black;
         }
@@ -113,14 +114,14 @@
 
         </div>
     </div>
-    <form action="" method="get">
+    <form action="https://www.google.com/search" method="get">
         <div id="seach">
             <svg focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                 <path
                     d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z">
                 </path>
             </svg>
-            <input class="word" type="text">
+            <input name="q" class="word" type="text">
             <svg class="goxjub" focusable="false" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                 <path fill="#4285f4"
                     d="m12 15c1.66 0 3-1.31 3-2.97v-7.02c0-1.66-1.34-3.01-3-3.01s-3 1.34-3 3.01v7.02c0 1.66 1.34 2.97 3 2.97z">
@@ -157,5 +158,4 @@
        <input class="RNmpXc" value="好手氣" aria-label="好手氣" name="btnI" type="submit" jsaction="trigger.kWlxhc" data-ved="0ahUKEwiM8av-75v-AhVRCN4KHUZNCmUQ19QECBA">
     </div>
 </body>
-
 </html>
